--- a/Appointment-Scheduler/src/main/webapp/WEB-INF/web.xml
+++ b/Appointment-Scheduler/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,10 @@
   <welcome-file-list>
     <welcome-file>welcome.jsp</welcome-file>
   </welcome-file-list>
+   <jsp-config>
+        <taglib>
+            <taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
+            <taglib-location>/WEB-INF/lib/c-1.2.1.jar</taglib-location>
+        </taglib>
+    </jsp-config>
 </web-app>
